// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monitoring Service Get $metadata 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="4.0" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Capabilities.V1.xml">
    <edmx:Include Alias="Capabilities" Namespace="Org.OData.Capabilities.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Validation.V1.xml">
    <edmx:Include Alias="Validation" Namespace="Org.OData.Validation.V1"/>
  </edmx:Reference>
  <edmx:DataServices>
    <Schema Namespace="SchedulingMonitoringService" xmlns="http://docs.oasis-open.org/odata/ns/edm">
      <Annotation Term="Core.Links">
        <Collection>
          <Record>
            <PropertyValue Property="rel" String="author"/>
            <PropertyValue Property="href" String="https://cap.cloud.sap"/>
          </Record>
        </Collection>
      </Annotation>
      <EntityContainer Name="EntityContainer">
        <EntitySet Name="JobDefinition" EntityType="SchedulingMonitoringService.JobDefinition">
          <NavigationPropertyBinding Path="parameters" Target="JobParameterDefinition"/>
        </EntitySet>
        <EntitySet Name="JobParameterDefinition" EntityType="SchedulingMonitoringService.JobParameterDefinition">
          <NavigationPropertyBinding Path="job" Target="JobDefinition"/>
          <NavigationPropertyBinding Path="type" Target="ParameterType"/>
          <NavigationPropertyBinding Path="dataType" Target="DataType"/>
          <NavigationPropertyBinding Path="mappingType" Target="MappingType"/>
        </EntitySet>
        <EntitySet Name="Job" EntityType="SchedulingMonitoringService.Job">
          <NavigationPropertyBinding Path="definition" Target="JobDefinition"/>
          <NavigationPropertyBinding Path="status" Target="JobStatus"/>
          <NavigationPropertyBinding Path="parameters" Target="JobParameter"/>
        </EntitySet>
        <EntitySet Name="JobParameter" EntityType="SchedulingMonitoringService.JobParameter">
          <NavigationPropertyBinding Path="job" Target="Job"/>
          <NavigationPropertyBinding Path="definition" Target="JobParameterDefinition"/>
        </EntitySet>
        <EntitySet Name="JobStatus" EntityType="SchedulingMonitoringService.JobStatus">
          <NavigationPropertyBinding Path="texts" Target="JobStatus_texts"/>
          <NavigationPropertyBinding Path="localized" Target="JobStatus_texts"/>
        </EntitySet>
        <EntitySet Name="ParameterType" EntityType="SchedulingMonitoringService.ParameterType">
          <NavigationPropertyBinding Path="texts" Target="ParameterType_texts"/>
          <NavigationPropertyBinding Path="localized" Target="ParameterType_texts"/>
        </EntitySet>
        <EntitySet Name="DataType" EntityType="SchedulingMonitoringService.DataType">
          <NavigationPropertyBinding Path="texts" Target="DataType_texts"/>
          <NavigationPropertyBinding Path="localized" Target="DataType_texts"/>
        </EntitySet>
        <EntitySet Name="MappingType" EntityType="SchedulingMonitoringService.MappingType">
          <NavigationPropertyBinding Path="texts" Target="MappingType_texts"/>
          <NavigationPropertyBinding Path="localized" Target="MappingType_texts"/>
        </EntitySet>
        <EntitySet Name="JobStatus_texts" EntityType="SchedulingMonitoringService.JobStatus_texts"/>
        <EntitySet Name="ParameterType_texts" EntityType="SchedulingMonitoringService.ParameterType_texts"/>
        <EntitySet Name="DataType_texts" EntityType="SchedulingMonitoringService.DataType_texts"/>
        <EntitySet Name="MappingType_texts" EntityType="SchedulingMonitoringService.MappingType_texts"/>
      </EntityContainer>
      <EntityType Name="JobDefinition">
        <Key>
          <PropertyRef Name="name"/>
        </Key>
        <Property Name="name" Type="Edm.String" Nullable="false"/>
        <Property Name="description" Type="Edm.String"/>
        <Property Name="version" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="parameters" Type="Collection(SchedulingMonitoringService.JobParameterDefinition)" Partner="job">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="JobParameterDefinition">
        <Key>
          <PropertyRef Name="name"/>
          <PropertyRef Name="job_name"/>
        </Key>
        <Property Name="name" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="job" Type="SchedulingMonitoringService.JobDefinition" Nullable="false" Partner="parameters">
          <ReferentialConstraint Property="job_name" ReferencedProperty="name"/>
        </NavigationProperty>
        <Property Name="job_name" Type="Edm.String" Nullable="false"/>
        <Property Name="description" Type="Edm.String"/>
        <NavigationProperty Name="type" Type="SchedulingMonitoringService.ParameterType" Nullable="false">
          <ReferentialConstraint Property="type_code" ReferencedProperty="code"/>
        </NavigationProperty>
        <Property Name="type_code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="dataType" Type="SchedulingMonitoringService.DataType" Nullable="false">
          <ReferentialConstraint Property="dataType_code" ReferencedProperty="code"/>
        </NavigationProperty>
        <Property Name="dataType_code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="mappingType" Type="SchedulingMonitoringService.MappingType">
          <ReferentialConstraint Property="mappingType_code" ReferencedProperty="code"/>
        </NavigationProperty>
        <Property Name="mappingType_code" Type="Edm.String"/>
        <Property Name="value" Type="Edm.String"/>
        <Property Name="required" Type="Edm.Boolean" Nullable="false" DefaultValue="false"/>
      </EntityType>
      <EntityType Name="Job">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="createdAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="createdBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="modifiedAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="modifiedBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="referenceID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="startDateTime" Type="Edm.DateTimeOffset"/>
        <NavigationProperty Name="definition" Type="SchedulingMonitoringService.JobDefinition" Nullable="false">
          <ReferentialConstraint Property="definition_name" ReferencedProperty="name"/>
        </NavigationProperty>
        <Property Name="definition_name" Type="Edm.String" Nullable="false"/>
        <Property Name="version" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="status" Type="SchedulingMonitoringService.JobStatus" Nullable="false">
          <ReferentialConstraint Property="status_code" ReferencedProperty="code"/>
        </NavigationProperty>
        <Property Name="status_code" Type="Edm.String" Nullable="false" DefaultValue="requested"/>
        <NavigationProperty Name="parameters" Type="Collection(SchedulingMonitoringService.JobParameter)" Partner="job">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="JobParameter">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <NavigationProperty Name="job" Type="SchedulingMonitoringService.Job" Nullable="false" Partner="parameters">
          <ReferentialConstraint Property="job_ID" ReferencedProperty="ID"/>
        </NavigationProperty>
        <Property Name="job_ID" Type="Edm.Guid" Nullable="false"/>
        <NavigationProperty Name="definition" Type="SchedulingMonitoringService.JobParameterDefinition" Nullable="false">
          <ReferentialConstraint Property="definition_name" ReferencedProperty="name"/>
          <ReferentialConstraint Property="definition_job_name" ReferencedProperty="job_name"/>
        </NavigationProperty>
        <Property Name="definition_name" Type="Edm.String" Nullable="false"/>
        <Property Name="definition_job_name" Type="Edm.String" Nullable="false"/>
        <Property Name="value" Type="Edm.String"/>
      </EntityType>
      <EntityType Name="JobStatus">
        <Key>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="texts" Type="Collection(SchedulingMonitoringService.JobStatus_texts)">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
        <NavigationProperty Name="localized" Type="SchedulingMonitoringService.JobStatus_texts">
          <ReferentialConstraint Property="code" ReferencedProperty="code"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="ParameterType">
        <Key>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="texts" Type="Collection(SchedulingMonitoringService.ParameterType_texts)">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
        <NavigationProperty Name="localized" Type="SchedulingMonitoringService.ParameterType_texts">
          <ReferentialConstraint Property="code" ReferencedProperty="code"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="DataType">
        <Key>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="texts" Type="Collection(SchedulingMonitoringService.DataType_texts)">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
        <NavigationProperty Name="localized" Type="SchedulingMonitoringService.DataType_texts">
          <ReferentialConstraint Property="code" ReferencedProperty="code"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="MappingType">
        <Key>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
        <NavigationProperty Name="texts" Type="Collection(SchedulingMonitoringService.MappingType_texts)">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
        <NavigationProperty Name="localized" Type="SchedulingMonitoringService.MappingType_texts">
          <ReferentialConstraint Property="code" ReferencedProperty="code"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name="JobStatus_texts">
        <Key>
          <PropertyRef Name="locale"/>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="locale" Type="Edm.String" MaxLength="14" Nullable="false"/>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
      </EntityType>
      <EntityType Name="ParameterType_texts">
        <Key>
          <PropertyRef Name="locale"/>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="locale" Type="Edm.String" MaxLength="14" Nullable="false"/>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
      </EntityType>
      <EntityType Name="DataType_texts">
        <Key>
          <PropertyRef Name="locale"/>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="locale" Type="Edm.String" MaxLength="14" Nullable="false"/>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
      </EntityType>
      <EntityType Name="MappingType_texts">
        <Key>
          <PropertyRef Name="locale"/>
          <PropertyRef Name="code"/>
        </Key>
        <Property Name="locale" Type="Edm.String" MaxLength="14" Nullable="false"/>
        <Property Name="name" Type="Edm.String" MaxLength="255"/>
        <Property Name="descr" Type="Edm.String" MaxLength="1000"/>
        <Property Name="code" Type="Edm.String" Nullable="false"/>
      </EntityType>
      <Action Name="cancel" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="SchedulingMonitoringService.Job"/>
        <ReturnType Type="SchedulingMonitoringService.Job"/>
      </Action>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/JobDefinition">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobDefinition/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobDefinition/description">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobDefinition/version">
        <Annotation Term="Common.Label" String="Version"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/JobParameterDefinition">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/job">
        <Annotation Term="Common.Label" String="Job"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/job_name">
        <Annotation Term="Common.Label" String="Job"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/description">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/type">
        <Annotation Term="Common.Label" String="Parameter Type"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/type_code">
        <Annotation Term="Common.Label" String="Parameter Type"/>
        <Annotation Term="Common.ValueList">
          <Record Type="Common.ValueListType">
            <PropertyValue Property="Label" String="Parameter Type"/>
            <PropertyValue Property="CollectionPath" String="ParameterType"/>
            <PropertyValue Property="Parameters">
              <Collection>
                <Record Type="Common.ValueListParameterInOut">
                  <PropertyValue Property="LocalDataProperty" PropertyPath="type_code"/>
                  <PropertyValue Property="ValueListProperty" String="code"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="name"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/dataType">
        <Annotation Term="Common.Label" String="Data Type"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/dataType_code">
        <Annotation Term="Common.Label" String="Data Type"/>
        <Annotation Term="Common.ValueList">
          <Record Type="Common.ValueListType">
            <PropertyValue Property="Label" String="Data Type"/>
            <PropertyValue Property="CollectionPath" String="DataType"/>
            <PropertyValue Property="Parameters">
              <Collection>
                <Record Type="Common.ValueListParameterInOut">
                  <PropertyValue Property="LocalDataProperty" PropertyPath="dataType_code"/>
                  <PropertyValue Property="ValueListProperty" String="code"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="name"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/mappingType">
        <Annotation Term="Common.Label" String="Mapping Type"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/mappingType_code">
        <Annotation Term="Common.Label" String="Mapping Type"/>
        <Annotation Term="Common.ValueList">
          <Record Type="Common.ValueListType">
            <PropertyValue Property="Label" String="Mapping Type"/>
            <PropertyValue Property="CollectionPath" String="MappingType"/>
            <PropertyValue Property="Parameters">
              <Collection>
                <Record Type="Common.ValueListParameterInOut">
                  <PropertyValue Property="LocalDataProperty" PropertyPath="mappingType_code"/>
                  <PropertyValue Property="ValueListProperty" String="code"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="name"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/value">
        <Annotation Term="Common.Label" String="Value"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameterDefinition/required">
        <Annotation Term="Common.Label" String="Required"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="ID"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Cancel"/>
              <PropertyValue Property="Action" String="SchedulingMonitoringService.cancel"/>
              <PropertyValue Property="InvocationGrouping" EnumMember="UI.OperationGroupingType/Isolated"/>
              <PropertyValue Property="Criticality" EnumMember="UI.CriticalityType/Negative"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="ID"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="definition_name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="status_code"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="modifiedAt"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="createdAt"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="ID" String="General"/>
              <PropertyValue Property="Label" String="General Information"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="Label" String="Parameters"/>
              <PropertyValue Property="Target" AnnotationPath="parameters/@UI.LineItem"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="ID"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="definition_name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="status_code"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="modifiedAt"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="createdAt"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Job"/>
            <PropertyValue Property="TypeNamePlural" String="Jobs"/>
          </Record>
        </Annotation>
        <Annotation Term="UI.PresentationVariant">
          <Record Type="UI.PresentationVariantType">
            <PropertyValue Property="SortOrder">
              <Collection>
                <Record Type="Common.SortOrderType">
                  <PropertyValue Property="Property" PropertyPath="createdBy"/>
                  <PropertyValue Property="Descending" Bool="true"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>definition_name</PropertyPath>
            <PropertyPath>status_code</PropertyPath>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/Job">
        <Annotation Term="UI.PresentationVariant">
          <Record Type="UI.PresentationVariantType">
            <PropertyValue Property="SortOrder">
              <Collection>
                <Record Type="Common.SortOrderType">
                  <PropertyValue Property="Property" PropertyPath="createdBy"/>
                  <PropertyValue Property="Descending" Bool="true"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/ID">
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/createdAt">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="UI.ExcludeFromNavigationContext" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Created On"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/createdBy">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="UI.ExcludeFromNavigationContext" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Created By"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/modifiedAt">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="UI.ExcludeFromNavigationContext" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Changed On"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/modifiedBy">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="UI.ExcludeFromNavigationContext" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Changed By"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/referenceID">
        <Annotation Term="Common.Label" String="Reference ID"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/startDateTime">
        <Annotation Term="Common.Label" String="Start Date &amp; Time"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/definition">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/definition_name">
        <Annotation Term="Common.Text" Path="definition/name">
          <Annotation Term="UI.TextArrangement" EnumMember="UI.TextArrangementType/TextFirst"/>
        </Annotation>
        <Annotation Term="Common.ValueList">
          <Record Type="Common.ValueListType">
            <PropertyValue Property="Label" String="Name"/>
            <PropertyValue Property="CollectionPath" String="JobDefinition"/>
            <PropertyValue Property="Parameters">
              <Collection>
                <Record Type="Common.ValueListParameterInOut">
                  <PropertyValue Property="LocalDataProperty" PropertyPath="definition_name"/>
                  <PropertyValue Property="ValueListProperty" String="name"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="description"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="version"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/version">
        <Annotation Term="Common.Label" String="Version"/>
        <Annotation Term="Core.Computed" Bool="true"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/status">
        <Annotation Term="Common.Label" String="Status"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.Job/status_code">
        <Annotation Term="Common.ValueListWithFixedValues" Bool="true"/>
        <Annotation Term="Common.Text" Path="status/name">
          <Annotation Term="UI.TextArrangement" EnumMember="UI.TextArrangementType/TextFirst"/>
        </Annotation>
        <Annotation Term="Common.Label" String="Status"/>
        <Annotation Term="Common.ValueList">
          <Record Type="Common.ValueListType">
            <PropertyValue Property="Label" String="Status"/>
            <PropertyValue Property="CollectionPath" String="JobStatus"/>
            <PropertyValue Property="Parameters">
              <Collection>
                <Record Type="Common.ValueListParameterInOut">
                  <PropertyValue Property="LocalDataProperty" PropertyPath="status_code"/>
                  <PropertyValue Property="ValueListProperty" String="code"/>
                </Record>
                <Record Type="Common.ValueListParameterDisplayOnly">
                  <PropertyValue Property="ValueListProperty" String="name"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="Core.Computed" Bool="true"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.cancel(SchedulingMonitoringService.Job)">
        <Annotation Term="Core.OperationAvailable">
          <Or>
            <Eq>
              <Path>in/status_code</Path>
              <String>requested</String>
            </Eq>
            <Eq>
              <Path>in/status_code</Path>
              <String>running</String>
            </Eq>
          </Or>
        </Annotation>
        <Annotation Term="Common.IsActionCritical" Bool="true"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="ID"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="ID"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="definition_name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="definition/type_code"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="definition/dataType_code"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="definition/mappingType_code"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="value"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="ID" String="General"/>
              <PropertyValue Property="Label" String="General Information"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="ID"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="definition_name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="definition/type_code"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="definition/dataType_code"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="definition/mappingType_code"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="value"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Job"/>
            <PropertyValue Property="TypeNamePlural" String="Jobs"/>
          </Record>
        </Annotation>
        <Annotation Term="UI.PresentationVariant">
          <Record Type="UI.PresentationVariantType">
            <PropertyValue Property="SortOrder">
              <Collection>
                <Record Type="Common.SortOrderType">
                  <PropertyValue Property="Property" PropertyPath="definition_name"/>
                  <PropertyValue Property="Descending" Bool="true"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>definition_name</PropertyPath>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/JobParameter">
        <Annotation Term="UI.PresentationVariant">
          <Record Type="UI.PresentationVariantType">
            <PropertyValue Property="SortOrder">
              <Collection>
                <Record Type="Common.SortOrderType">
                  <PropertyValue Property="Property" PropertyPath="definition_name"/>
                  <PropertyValue Property="Descending" Bool="true"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/ID">
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/job">
        <Annotation Term="Common.Label" String="Job"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/job_ID">
        <Annotation Term="Common.Label" String="Job"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/definition">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/definition_name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/definition_job_name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobParameter/value">
        <Annotation Term="Common.Label" String="Value"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/JobStatus">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus/code">
        <Annotation Term="Common.Label" String="Status"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="requested"/>
              <PropertyValue Property="Value" String="requested"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="running"/>
              <PropertyValue Property="Value" String="running"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completed"/>
              <PropertyValue Property="Value" String="completed"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completedWithError"/>
              <PropertyValue Property="Value" String="completedWithError"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completedWithWarning"/>
              <PropertyValue Property="Value" String="completedWithWarning"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="failed"/>
              <PropertyValue Property="Value" String="failed"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="cancelRequested"/>
              <PropertyValue Property="Value" String="cancelRequested"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="canceled"/>
              <PropertyValue Property="Value" String="canceled"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/ParameterType">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType/code">
        <Annotation Term="Common.Label" String="Parameter Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="readOnlyValue"/>
              <PropertyValue Property="Value" String="readOnlyValue"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="writeableValue"/>
              <PropertyValue Property="Value" String="writeableValue"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="mapping"/>
              <PropertyValue Property="Value" String="mapping"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/DataType">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType/code">
        <Annotation Term="Common.Label" String="Data Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="string"/>
              <PropertyValue Property="Value" String="string"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="number"/>
              <PropertyValue Property="Value" String="number"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="datetime"/>
              <PropertyValue Property="Value" String="datetime"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="boolean"/>
              <PropertyValue Property="Value" String="boolean"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.EntityContainer/MappingType">
        <Annotation Term="Capabilities.DeleteRestrictions">
          <Record Type="Capabilities.DeleteRestrictionsType">
            <PropertyValue Property="Deletable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.InsertRestrictions">
          <Record Type="Capabilities.InsertRestrictionsType">
            <PropertyValue Property="Insertable" Bool="false"/>
          </Record>
        </Annotation>
        <Annotation Term="Capabilities.UpdateRestrictions">
          <Record Type="Capabilities.UpdateRestrictionsType">
            <PropertyValue Property="Updatable" Bool="false"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType/code">
        <Annotation Term="Common.Label" String="Mapping Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="accountingPrinciple"/>
              <PropertyValue Property="Value" String="accountingPrinciple"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="companyCode"/>
              <PropertyValue Property="Value" String="companyCode"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="plant"/>
              <PropertyValue Property="Value" String="plant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="controllingArea"/>
              <PropertyValue Property="Value" String="controllingArea"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalPeriod"/>
              <PropertyValue Property="Value" String="fiscalPeriod"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYearPeriod"/>
              <PropertyValue Property="Value" String="fiscalYearPeriod"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYear"/>
              <PropertyValue Property="Value" String="fiscalYear"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="keyDate"/>
              <PropertyValue Property="Value" String="keyDate"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="chartOfAccounts"/>
              <PropertyValue Property="Value" String="chartOfAccounts"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYearVariant"/>
              <PropertyValue Property="Value" String="fiscalYearVariant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="ledger"/>
              <PropertyValue Property="Value" String="ledger"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="testRun"/>
              <PropertyValue Property="Value" String="testRun"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="postingPeriodVariant"/>
              <PropertyValue Property="Value" String="postingPeriodVariant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="processingUser"/>
              <PropertyValue Property="Value" String="processingUser"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="interestedUser"/>
              <PropertyValue Property="Value" String="interestedUser"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="userResponsible"/>
              <PropertyValue Property="Value" String="userResponsible"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="processingUserEmail"/>
              <PropertyValue Property="Value" String="processingUserEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="interestedUserEmail"/>
              <PropertyValue Property="Value" String="interestedUserEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="userResponsibleEmail"/>
              <PropertyValue Property="Value" String="userResponsibleEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="executionID"/>
              <PropertyValue Property="Value" String="executionID"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField1"/>
              <PropertyValue Property="Value" String="customField1"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField2"/>
              <PropertyValue Property="Value" String="customField2"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField3"/>
              <PropertyValue Property="Value" String="customField3"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus_texts/locale">
        <Annotation Term="Common.Label" String="Language Code"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus_texts/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus_texts/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.JobStatus_texts/code">
        <Annotation Term="Common.Label" String="Status"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="requested"/>
              <PropertyValue Property="Value" String="requested"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="running"/>
              <PropertyValue Property="Value" String="running"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completed"/>
              <PropertyValue Property="Value" String="completed"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completedWithError"/>
              <PropertyValue Property="Value" String="completedWithError"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="completedWithWarning"/>
              <PropertyValue Property="Value" String="completedWithWarning"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="failed"/>
              <PropertyValue Property="Value" String="failed"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="cancelRequested"/>
              <PropertyValue Property="Value" String="cancelRequested"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="canceled"/>
              <PropertyValue Property="Value" String="canceled"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType_texts/locale">
        <Annotation Term="Common.Label" String="Language Code"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType_texts/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType_texts/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.ParameterType_texts/code">
        <Annotation Term="Common.Label" String="Parameter Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="readOnlyValue"/>
              <PropertyValue Property="Value" String="readOnlyValue"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="writeableValue"/>
              <PropertyValue Property="Value" String="writeableValue"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="mapping"/>
              <PropertyValue Property="Value" String="mapping"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType_texts/locale">
        <Annotation Term="Common.Label" String="Language Code"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType_texts/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType_texts/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.DataType_texts/code">
        <Annotation Term="Common.Label" String="Data Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="string"/>
              <PropertyValue Property="Value" String="string"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="number"/>
              <PropertyValue Property="Value" String="number"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="datetime"/>
              <PropertyValue Property="Value" String="datetime"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="boolean"/>
              <PropertyValue Property="Value" String="boolean"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType_texts/locale">
        <Annotation Term="Common.Label" String="Language Code"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType_texts/name">
        <Annotation Term="Common.Label" String="Name"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType_texts/descr">
        <Annotation Term="Common.Label" String="Description"/>
      </Annotations>
      <Annotations Target="SchedulingMonitoringService.MappingType_texts/code">
        <Annotation Term="Common.Label" String="Mapping Type"/>
        <Annotation Term="Validation.AllowedValues">
          <Collection>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="accountingPrinciple"/>
              <PropertyValue Property="Value" String="accountingPrinciple"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="companyCode"/>
              <PropertyValue Property="Value" String="companyCode"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="plant"/>
              <PropertyValue Property="Value" String="plant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="controllingArea"/>
              <PropertyValue Property="Value" String="controllingArea"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalPeriod"/>
              <PropertyValue Property="Value" String="fiscalPeriod"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYearPeriod"/>
              <PropertyValue Property="Value" String="fiscalYearPeriod"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYear"/>
              <PropertyValue Property="Value" String="fiscalYear"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="keyDate"/>
              <PropertyValue Property="Value" String="keyDate"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="chartOfAccounts"/>
              <PropertyValue Property="Value" String="chartOfAccounts"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="fiscalYearVariant"/>
              <PropertyValue Property="Value" String="fiscalYearVariant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="ledger"/>
              <PropertyValue Property="Value" String="ledger"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="testRun"/>
              <PropertyValue Property="Value" String="testRun"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="postingPeriodVariant"/>
              <PropertyValue Property="Value" String="postingPeriodVariant"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="processingUser"/>
              <PropertyValue Property="Value" String="processingUser"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="interestedUser"/>
              <PropertyValue Property="Value" String="interestedUser"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="userResponsible"/>
              <PropertyValue Property="Value" String="userResponsible"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="processingUserEmail"/>
              <PropertyValue Property="Value" String="processingUserEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="interestedUserEmail"/>
              <PropertyValue Property="Value" String="interestedUserEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="userResponsibleEmail"/>
              <PropertyValue Property="Value" String="userResponsibleEmail"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="executionID"/>
              <PropertyValue Property="Value" String="executionID"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField1"/>
              <PropertyValue Property="Value" String="customField1"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField2"/>
              <PropertyValue Property="Value" String="customField2"/>
            </Record>
            <Record Type="Validation.AllowedValue">
              <Annotation Term="Core.SymbolicName" String="customField3"/>
              <PropertyValue Property="Value" String="customField3"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`Monitoring Service Get Codelists 1`] = `
{
  "@odata.context": "$metadata#JobStatus",
  "value": [
    {
      "code": "canceled",
      "descr": "Canceled",
      "name": "Canceled",
    },
    {
      "code": "cancelRequested",
      "descr": "Requested",
      "name": "Cancel Requested",
    },
    {
      "code": "completed",
      "descr": "Completed",
      "name": "Completed",
    },
    {
      "code": "completedWithError",
      "descr": "Error",
      "name": "Completed With Error",
    },
    {
      "code": "completedWithWarning",
      "descr": "Warning",
      "name": "Completed With Warning",
    },
    {
      "code": "failed",
      "descr": "Failed",
      "name": "Failed",
    },
    {
      "code": "requested",
      "descr": "Requested",
      "name": "Requested",
    },
    {
      "code": "running",
      "descr": "Running",
      "name": "Running",
    },
  ],
}
`;

exports[`Monitoring Service Get Codelists 2`] = `
{
  "@odata.context": "$metadata#ParameterType",
  "value": [
    {
      "code": "mapping",
      "descr": "Mapping",
      "name": "Mapping",
    },
    {
      "code": "readOnlyValue",
      "descr": "Read-Only Value",
      "name": "Read-Only Value",
    },
    {
      "code": "writeableValue",
      "descr": "Writable Value",
      "name": "Writable Value",
    },
  ],
}
`;

exports[`Monitoring Service Get Codelists 3`] = `
{
  "@odata.context": "$metadata#DataType",
  "value": [
    {
      "code": "boolean",
      "descr": "Boolean",
      "name": "Boolean",
    },
    {
      "code": "datetime",
      "descr": "Date & Time",
      "name": "Date & Time",
    },
    {
      "code": "number",
      "descr": "Number",
      "name": "Number",
    },
    {
      "code": "string",
      "descr": "String",
      "name": "String",
    },
  ],
}
`;

exports[`Monitoring Service Get Codelists 4`] = `
{
  "@odata.context": "$metadata#MappingType",
  "value": [
    {
      "code": "accountingPrinciple",
      "descr": "Accounting Principle",
      "name": "Accounting Principle",
    },
    {
      "code": "chartOfAccounts",
      "descr": "Chart Of Accounts",
      "name": "Chart Of Accounts",
    },
    {
      "code": "companyCode",
      "descr": "Company Code",
      "name": "Company Code",
    },
    {
      "code": "controllingArea",
      "descr": "Controlling Area",
      "name": "Controlling Area",
    },
    {
      "code": "customField1",
      "descr": "Custom Field 1",
      "name": "Custom Field 1",
    },
    {
      "code": "customField2",
      "descr": "Custom Field 2",
      "name": "Custom Field 2",
    },
    {
      "code": "customField3",
      "descr": "Custom Field 3",
      "name": "Custom Field 3",
    },
    {
      "code": "executionID",
      "descr": "Execution ID",
      "name": "Execution ID",
    },
    {
      "code": "fiscalPeriod",
      "descr": "Fiscal Period",
      "name": "Fiscal Period",
    },
    {
      "code": "fiscalYear",
      "descr": "Fiscal Year",
      "name": "Fiscal Year",
    },
    {
      "code": "fiscalYearPeriod",
      "descr": "Fiscal Year Period",
      "name": "Fiscal Year Period",
    },
    {
      "code": "fiscalYearVariant",
      "descr": "Fiscal Year Variant",
      "name": "Fiscal Year Variant",
    },
    {
      "code": "interestedUser",
      "descr": "Interested User",
      "name": "Interested User",
    },
    {
      "code": "interestedUserEmail",
      "descr": "Interested User Email",
      "name": "Interested User Email",
    },
    {
      "code": "keyDate",
      "descr": "Key Date",
      "name": "Key Date",
    },
    {
      "code": "ledger",
      "descr": "Ledger",
      "name": "Ledger",
    },
    {
      "code": "plant",
      "descr": "Plant",
      "name": "Plant",
    },
    {
      "code": "postingPeriodVariant",
      "descr": "Posting Period Variant",
      "name": "Posting Period Variant",
    },
    {
      "code": "processingUser",
      "descr": "Processing User",
      "name": "Processing User",
    },
    {
      "code": "processingUserEmail",
      "descr": "Processing User Email",
      "name": "Processing User Email",
    },
    {
      "code": "testRun",
      "descr": "Test Run",
      "name": "Test Run",
    },
    {
      "code": "userResponsible",
      "descr": "User Responsible",
      "name": "User Responsible",
    },
    {
      "code": "userResponsibleEmail",
      "descr": "User Responsible Email",
      "name": "User Responsible Email",
    },
  ],
}
`;

exports[`Monitoring Service Get Job Definitions 1`] = `
{
  "@odata.context": "$metadata#JobDefinition",
  "value": [
    {
      "description": "Job Definition 1",
      "name": "JOB_1",
      "parameters": [
        {
          "dataType_code": "string",
          "description": "Parameter A",
          "job_name": "JOB_1",
          "mappingType_code": null,
          "name": "A",
          "required": true,
          "type_code": "writableValue",
          "value": "ABC",
        },
        {
          "dataType_code": "number",
          "description": "Parameter B",
          "job_name": "JOB_1",
          "mappingType_code": null,
          "name": "B",
          "required": false,
          "type_code": "readOnlyValue",
          "value": "21",
        },
        {
          "dataType_code": "boolean",
          "description": "Parameter C",
          "job_name": "JOB_1",
          "mappingType_code": "flag",
          "name": "C",
          "required": true,
          "type_code": "mapping",
          "value": "0",
        },
        {
          "dataType_code": "number",
          "description": "Parameter D",
          "job_name": "JOB_1",
          "mappingType_code": null,
          "name": "D",
          "required": false,
          "type_code": "writableValue",
          "value": "22",
        },
        {
          "dataType_code": "datetime",
          "description": "Parameter D",
          "job_name": "JOB_1",
          "mappingType_code": null,
          "name": "E",
          "required": false,
          "type_code": "writableValue",
          "value": "2025-01-01T00:00:00Z",
        },
      ],
      "version": "1",
    },
    {
      "description": "Job Definition 2",
      "name": "JOB_2",
      "parameters": [
        {
          "dataType_code": "string",
          "description": "Parameter A",
          "job_name": "JOB_2",
          "mappingType_code": null,
          "name": "A",
          "required": true,
          "type_code": "writableValue",
          "value": "ABC",
        },
        {
          "dataType_code": "number",
          "description": "Parameter B",
          "job_name": "JOB_2",
          "mappingType_code": null,
          "name": "B",
          "required": false,
          "type_code": "readOnlyValue",
          "value": "23",
        },
        {
          "dataType_code": "boolean",
          "description": "Parameter C",
          "job_name": "JOB_2",
          "mappingType_code": "flag",
          "name": "C",
          "required": true,
          "type_code": "mapping",
          "value": "0",
        },
        {
          "dataType_code": "number",
          "description": "Parameter D",
          "job_name": "JOB_2",
          "mappingType_code": null,
          "name": "D",
          "required": false,
          "type_code": "writableValue",
          "value": "24",
        },
        {
          "dataType_code": "datetime",
          "description": "Parameter E",
          "job_name": "JOB_2",
          "mappingType_code": null,
          "name": "E",
          "required": false,
          "type_code": "writableValue",
          "value": "2025-01-01T00:00:00Z",
        },
      ],
      "version": "1",
    },
  ],
}
`;

exports[`Monitoring Service Get Job Definitions 2`] = `
{
  "@odata.context": "$metadata#JobDefinition/$entity",
  "description": "Job Definition 1",
  "name": "JOB_1",
  "parameters": [
    {
      "dataType_code": "string",
      "description": "Parameter A",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "A",
      "required": true,
      "type_code": "writableValue",
      "value": "ABC",
    },
    {
      "dataType_code": "number",
      "description": "Parameter B",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "B",
      "required": false,
      "type_code": "readOnlyValue",
      "value": "21",
    },
    {
      "dataType_code": "boolean",
      "description": "Parameter C",
      "job_name": "JOB_1",
      "mappingType_code": "flag",
      "name": "C",
      "required": true,
      "type_code": "mapping",
      "value": "0",
    },
    {
      "dataType_code": "number",
      "description": "Parameter D",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "D",
      "required": false,
      "type_code": "writableValue",
      "value": "22",
    },
    {
      "dataType_code": "datetime",
      "description": "Parameter D",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "E",
      "required": false,
      "type_code": "writableValue",
      "value": "2025-01-01T00:00:00Z",
    },
  ],
  "version": "1",
}
`;

exports[`Monitoring Service Get Job Definitions 3`] = `
{
  "@odata.context": "$metadata#JobDefinition/$entity",
  "description": "Job Definition 1",
  "name": "JOB_1",
  "parameters": [
    {
      "dataType_code": "string",
      "description": "Parameter A",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "A",
      "required": true,
      "type_code": "writableValue",
      "value": "ABC",
    },
    {
      "dataType_code": "number",
      "description": "Parameter B",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "B",
      "required": false,
      "type_code": "readOnlyValue",
      "value": "21",
    },
    {
      "dataType_code": "boolean",
      "description": "Parameter C",
      "job_name": "JOB_1",
      "mappingType_code": "flag",
      "name": "C",
      "required": true,
      "type_code": "mapping",
      "value": "0",
    },
    {
      "dataType_code": "number",
      "description": "Parameter D",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "D",
      "required": false,
      "type_code": "writableValue",
      "value": "22",
    },
    {
      "dataType_code": "datetime",
      "description": "Parameter D",
      "job_name": "JOB_1",
      "mappingType_code": null,
      "name": "E",
      "required": false,
      "type_code": "writableValue",
      "value": "2025-01-01T00:00:00Z",
    },
  ],
  "version": "1",
}
`;

exports[`Monitoring Service Get Jobs 1`] = `
{
  "@odata.context": "$metadata#Job",
  "value": [
    {
      "definition_name": "JOB_1",
      "parameters": [
        {
          "definition_job_name": "JOB_1",
          "definition_name": "A",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "ABC",
        },
        {
          "definition_job_name": "JOB_1",
          "definition_name": "B",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "11",
        },
        {
          "definition_job_name": "JOB_1",
          "definition_name": "C",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "true",
        },
        {
          "definition_job_name": "JOB_1",
          "definition_name": "D",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "12",
        },
        {
          "definition_job_name": "JOB_1",
          "definition_name": "E",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "2025-01-02T00:00:00Z",
        },
        {
          "definition_job_name": "JOB_2",
          "definition_name": "E",
          "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "2025-01-02T00:00:00Z",
        },
      ],
      "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
      "startDateTime": "2025-01-01T12:00:00Z",
      "status_code": "requested",
      "version": "1",
    },
    {
      "definition_name": "JOB_2",
      "parameters": [
        {
          "definition_job_name": "JOB_2",
          "definition_name": "A",
          "job_ID": "4a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "ABC",
        },
        {
          "definition_job_name": "JOB_2",
          "definition_name": "B",
          "job_ID": "4a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "13",
        },
        {
          "definition_job_name": "JOB_2",
          "definition_name": "C",
          "job_ID": "4a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "false",
        },
        {
          "definition_job_name": "JOB_2",
          "definition_name": "D",
          "job_ID": "4a89dfec-59f9-4a91-90fe-3c7ca7407103",
          "value": "14",
        },
      ],
      "referenceID": "8158cbab-a42b-4cb9-9656-8db72521d13d",
      "startDateTime": "2025-01-02T12:00:00Z",
      "status_code": "running",
      "version": "1",
    },
  ],
}
`;

exports[`Monitoring Service Get Jobs 2`] = `
{
  "@odata.context": "$metadata#Job/$entity",
  "definition_name": "JOB_1",
  "parameters": [
    {
      "definition_job_name": "JOB_1",
      "definition_name": "A",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "ABC",
    },
    {
      "definition_job_name": "JOB_1",
      "definition_name": "B",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "11",
    },
    {
      "definition_job_name": "JOB_1",
      "definition_name": "C",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "true",
    },
    {
      "definition_job_name": "JOB_1",
      "definition_name": "D",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "12",
    },
    {
      "definition_job_name": "JOB_1",
      "definition_name": "E",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "2025-01-02T00:00:00Z",
    },
    {
      "definition_job_name": "JOB_2",
      "definition_name": "E",
      "job_ID": "3a89dfec-59f9-4a91-90fe-3c7ca7407103",
      "value": "2025-01-02T00:00:00Z",
    },
  ],
  "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status_code": "requested",
  "version": "1",
}
`;
